chore: Add dbcontext

--- a/WebAPI/WebAPI/appsettings.json
+++ b/WebAPI/WebAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DataContext": "Server=localhost;Port=5432;Database=learningappdb;User Id=postgres;Password=postgres"
+  }
 }
