feat: Add email service

--- a/WebAPI/WebAPI/WebAPI.csproj
+++ b/WebAPI/WebAPI/WebAPI.csproj
@@ -30,4 +30,8 @@
       <Folder Include="Controllers\" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\User.Management.Service\User.Management.Service.csproj" />
+    </ItemGroup>
+
 </Project>
