--- a/WebAPI/WebAPI/appsettings.json
+++ b/WebAPI/WebAPI/appsettings.json
@@ -8,5 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DataContext": "Server=localhost;Port=5432;Database=learningappdb;User Id=postgres;Password=postgres"
+  },
+  "EmailConfiguration": {
+    "From" : "kisznerlorant21@gmail.com",
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 465,
+    "Username" : "kisznerlorant21@gmail.com",
+    "Password" : "etcmrlessfeuimcf"
   }
 }
