--- a/WebAPI/WebAPI/WebAPI.csproj
+++ b/WebAPI/WebAPI/WebAPI.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.19" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.19" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.19" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.19">
