--- a/WebAPI/WebAPI/appsettings.json
+++ b/WebAPI/WebAPI/appsettings.json
@@ -15,5 +15,10 @@
     "Port": 465,
     "Username" : "kisznerlorant21@gmail.com",
     "Password" : "etcmrlessfeuimcf"
+  },
+  "JWT": {
+    "ValidAudience" : "http://localhost:3000",
+    "ValidIssuer": "https://localhost:7120",
+    "Secret": "JWTAuthenticationHighlySecuredSecretKey12345"
   }
 }
