test: Write test cases for register endpoint

--- a/WebAPI/WebAPI/WebAPI.csproj
+++ b/WebAPI/WebAPI/WebAPI.csproj
@@ -31,4 +31,8 @@
       <ProjectReference Include="..\User.Management.Service\User.Management.Service.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Models\ErrorDtos\" />
+    </ItemGroup>
+
 </Project>
