--- a/WebAPI/WebAPI/appsettings.json
+++ b/WebAPI/WebAPI/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DataContext2": "Server=localhost;Port=5432;Database=learningappdb;User Id=postgres;Password=postgres",
-    "DataContext" : "Host=172.17.0.1;Port=5431;Database=learningappdb;Username=postgres;Password=postgres"
+    "DataContext": "Server=localhost;Port=5432;Database=learningappdb;User Id=postgres;Password=postgres",
+    "DataContext2" : "Host=172.17.0.1;Port=5431;Database=learningappdb;Username=postgres;Password=postgres"
   },
   "EmailConfiguration": {
     "From" : "kisznerlorant21@gmail.com",
@@ -21,5 +21,6 @@
     "ValidAudience" : "http://localhost:3000",
     "ValidIssuer": "https://localhost:7120",
     "Secret": "JWTAuthenticationHighlySecuredSecretKey12345"
-  }
+  },
+  "Urls": "http://localhost:5000"
 }
