chore: Deploying app

--- a/WebAPI/WebAPI/appsettings.json
+++ b/WebAPI/WebAPI/appsettings.json
@@ -5,10 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DataContext": "Server=localhost;Port=5432;Database=learningappdb;User Id=postgres;Password=postgres",
-    "DataContext2" : "Host=172.17.0.1;Port=5431;Database=learningappdb;Username=postgres;Password=postgres"
+    "DataContext" : "Host=learningappdb;Port=5432;Database=learningappdb;Username=postgres;Password=postgres"
   },
   "EmailConfiguration": {
     "From" : "kisznerlorant21@gmail.com",
@@ -22,5 +20,11 @@
     "ValidIssuer": "https://localhost:7120",
     "Secret": "JWTAuthenticationHighlySecuredSecretKey12345"
   },
-  "Urls": "http://localhost:5000"
+  "Kestrel": {
+    "EndPoints": {
+      "Http": {
+        "Url": "http://0.0.0.0:5111"
+      }
+    }
+  }
 }
