--- a/WebAPI/Dockerfile
+++ b/WebAPI/Dockerfile
@@ -13,3 +13,5 @@ FROM mcr.microsoft.com/dotnet/aspnet:6.0
 WORKDIR /App
 COPY --from=build-env /App/out .
 ENTRYPOINT ["dotnet", "WebAPI.dll"]
+
+EXPOSE 5111
