--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -14,7 +14,7 @@ ENV NODE_ENV production
 # Copy built assets from `builder` image
 COPY --from=builder /app/build /usr/share/nginx/html
 # Add your nginx.conf
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY nginx.conf /etc/nginx/nginx.conf
 # Expose port
 EXPOSE 80
 # Start nginx
