--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -1,10 +1,24 @@
-server_tokens off;
-server {
-    listen       80;
-    server_name  localhost;
-    location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
-        try_files $uri /index.html;
+http {
+    server {
+        listen       80;
+        server_name 52.57.115.197;
+
+        location / {
+            root   /usr/share/nginx/html;
+            index  index.html index.htm;
+            try_files $uri /index.html;
+            include /etc/nginx/mime.types;
+        }
+
+        location /api/ {
+            proxy_pass http://lap-api:5111;
+            # proxy_set_header   Upgrade $http_upgrade;
+            # proxy_set_header   Connection keep-alive;
+            # proxy_set_header   Host $host;
+            # proxy_cache_bypass $http_upgrade;
+            # proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            # proxy_set_header   X-Forwarded-Proto $scheme;
+        }
     }
 }
+events {}
