chore: Fix deployment issues

--- a/WebAPI/WebAPI/appsettings.json
+++ b/WebAPI/WebAPI/appsettings.json
@@ -16,8 +16,8 @@
     "Password" : "etcmrlessfeuimcf"
   },
   "JWT": {
-    "ValidAudience" : "http://localhost:3000",
-    "ValidIssuer": "https://localhost:7120",
+    "ValidAudience" : "http://52.57.115.197:80",
+    "ValidIssuer": "http://52.57.115.197:5111",
     "Secret": "JWTAuthenticationHighlySecuredSecretKey12345"
   },
   "Kestrel": {
