--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -12,12 +12,17 @@ http {
 
         location /api/ {
             proxy_pass http://lap-api:5111;
-            # proxy_set_header   Upgrade $http_upgrade;
-            # proxy_set_header   Connection keep-alive;
-            # proxy_set_header   Host $host;
-            # proxy_cache_bypass $http_upgrade;
-            # proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-            # proxy_set_header   X-Forwarded-Proto $scheme;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Cookie $http_cookie;
+            access_log /var/log/nginx/api_access.log;
+        }
+
+        location /static/ {
+            alias /usr/share/nginx/html/static/;
+            include /etc/nginx/mime.types;
         }
     }
 }
