chore: Add include error detail to connection string

--- a/WebAPI/WebAPI/appsettings.Development.json
+++ b/WebAPI/WebAPI/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DataContext" : "Host=localhost;Port=5432;Database=learningappdb;Username=postgres;Password=postgres"
+    "DataContext" : "Host=localhost;Port=5432;Database=learningappdb;Username=postgres;Password=postgres;Include Error Detail=true"
   },
   "EmailConfiguration": {
     "From" : "kisznerlorant21@gmail.com",
