chore: Magic fix

--- a/WebAPI/WebAPI/appsettings.Development.json
+++ b/WebAPI/WebAPI/appsettings.Development.json
@@ -8,17 +8,9 @@
   "ConnectionStrings": {
     "DataContext" : "Host=localhost;Port=5432;Database=learningappdb;Username=postgres;Password=postgres;Include Error Detail=true"
   },
-  "EmailConfiguration": {
-    "From" : "kisznerlorant21@gmail.com",
-    "SmtpServer": "smtp.gmail.com",
-    "Port": 465,
-    "Username" : "kisznerlorant21@gmail.com",
-    "Password" : "etcmrlessfeuimcf"
-  },
   "JWT": {
     "ValidAudience" : "http://localhost:3000",
-    "ValidIssuer": "https://localhost:5000",
-    "Secret": "JWTAuthenticationHighlySecuredSecretKey12345"
+    "ValidIssuer": "https://localhost:5000"
   },
   "Urls" : "http://localhost:5000"
 }
