--- a/WebAPI/WebAPI/appsettings.json
+++ b/WebAPI/WebAPI/appsettings.json
@@ -8,17 +8,9 @@
   "ConnectionStrings": {
     "DataContext" : "Host=learningappdb;Port=5432;Database=learningappdb;Username=postgres;Password=postgres"
   },
-  "EmailConfiguration": {
-    "From" : "kisznerlorant21@gmail.com",
-    "SmtpServer": "smtp.gmail.com",
-    "Port": 465,
-    "Username" : "kisznerlorant21@gmail.com",
-    "Password" : "etcmrlessfeuimcf"
-  },
   "JWT": {
     "ValidAudience" : "http://52.57.115.197:80",
-    "ValidIssuer": "http://52.57.115.197:5111",
-    "Secret": "JWTAuthenticationHighlySecuredSecretKey12345"
+    "ValidIssuer": "http://52.57.115.197:5111"
   },
   "Kestrel": {
     "EndPoints": {
