--- a/WebAPI/WebAPI/Properties/launchSetting.sample.json
+++ b/WebAPI/WebAPI/Properties/launchSetting.sample.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "$schema": "https://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
@@ -17,12 +17,12 @@
       "applicationUrl": "https://localhost:7120;http://localhost:5097",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "SMTP_PASSWORD": "wjnlcujbqkwezsav",
-        "EMAIL_FROM" : "kisznerlorant21@gmail.com",
-        "SMTP_SERVER": "smtp.gmail.com",
-        "EMAIL_PORT": "465",
-        "SMTP_USER_NAME" : "kisznerlorant21@gmail.com",
-        "JWT_SECRET" : "SuperSecretJWTKeyForWedDevNotes9000"
+        "SMTP_PASSWORD": "your smtp password",
+        "EMAIL_FROM" : "email from",
+        "SMTP_SERVER": "smtp server",
+        "EMAIL_PORT": "smtp server port",
+        "SMTP_USER_NAME" : "your smtp username",
+        "JWT_SECRET" : "you jwt secret"
       }
     },
     "IIS Express": {
