--- a/WebAPI/Dockerfile
+++ b/WebAPI/Dockerfile
@@ -12,6 +12,10 @@ RUN dotnet publish -c Release -o out
 FROM mcr.microsoft.com/dotnet/aspnet:6.0
 WORKDIR /App
 COPY --from=build-env /App/out .
+
+# Create the ProfilePictures directory
+RUN mkdir -p /App/ProfilePictures
+
 ENTRYPOINT ["dotnet", "WebAPI.dll"]
 
 EXPOSE 5111
